# parfect

./: .gitignore  README.md  docker-compose.yml
server/: Cargo.toml  Dockerfile
server/src/: main.rs
server/src/routes/: get_routes.rs
server/src/schemas/: event.rs  user.rs
